Merge work