@@ -5,9 +5,8 @@ import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static lookwords.FileUtils.lines;
@@ -16,17 +15,16 @@ import static lookwords.FileUtils.pathFrom;
 /**
  * Here we are using Blocking IO through java Reader.
  */
-public class FindWordBlockingReaderInStreams {
+public class FindBiggestWordBlockingReaderInStreams {
     private final boolean parallel;
 
-    public FindWordBlockingReaderInStreams() {
+    public FindBiggestWordBlockingReaderInStreams() {
         this(true);
     }
 
-    public FindWordBlockingReaderInStreams(boolean parallel) {
+    public FindBiggestWordBlockingReaderInStreams(boolean parallel) {
         this.parallel = parallel;
     }
-
 
 
     public final Containner<String> words(String folder) {
@@ -34,7 +32,8 @@ public class FindWordBlockingReaderInStreams {
         try (Stream<Path> paths = Files.walk(pathFrom(folder))) {
             List<CompletableFuture<Void>> words = paths
                 .filter(Files::isRegularFile)
-                .map(file  -> lines(file, containner)).toList();
+                .map(file  -> lines(file, containner))
+                    .collect(Collectors.toList());
 
            words.wait();
 
